2005-02-16  Per Bothner  <per@bothner.com>

	* kawa/standard/object.java (rewriteClassDef): If an input sub-form
	is a SyntaxForm remember that, and use it to setCurrentScope.
	Fixes Savannah PR 11822.
	(rewriteClassDef): Also use SyntaxForm to rewrite init forms.
	(scanClassDef): Fix some bugs in handling of init forms.

	* kawa/standard/define_class.java (scanForDefinitions): Handle the
	case that the input form is wrapped in a SyntaxForm.

2005-02-15  Per Bothner  <per@bothner.com>

	Use ModuleInfo to make sure 'run' is only done once, even if immediate.
	* kawa/standard/requier.java (find(String)): Use ModuleInfo.find.
	(find(ClassType, Environment), find(Class, Environment)): Remove.
	(importDefinitions): If instance is needed, manage it with ModuleInfo.
	If run is needed in immediate mode, use ModuleInfo's getRunInstance
	so run gets run only once, and at run-time, not compile-time.

2005-02-12  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (expand): Add extra test since Expression
	now extends Procedure.
	* kawa/standard/define.java (scanForm): Use setSymbol since
	setName(Object) was removed from LambdaExp.
	* kawa/standard/object.java (scanClassDef): Likewise.

	* kawa/standard/Scheme.java: Declare 'make-parameter' and
	'parameterize' from SRFI-39.

	* kawa/standard/location.java (class LocationProc): Moved class to
	new file gnu/mapping/LocationProc.java.

	* kawa/standard/define.java: Use different SetExp constructor,
	to avoid setting the 'binding' field, which will become private.
	* kawa/standard/define_class.java: Likewise.
	* kawa/standard/define_unit.java:  Likewise.
	* kawa/standard/object.java: Likewise.
	* kawa/standard/define_variable.java: Use SetExp's setBinding method.
	* kawa/standard/set_b.java: Likewise.

2005-02-07  Per Bothner  <per@bothner.com>

	* build.xml: Also compile srfi37.scm.  Compile DefineRecordType.scm
	before srfi37.scm, which makes use of define-record-type.
