@@ -1,3 +1,9 @@
+2005-02-17  Per Bothner  <per@bothner.com>
+
+	* kawa/lang/Translator.java (makeAlias, makeRenamedAlias): Merge former
+	into latter.  Set setDontDereference flag.
+	(define): Use modified makeRenamedAlias.
+
 2005-02-16  Per Bothner  <per@bothner.com>
 
 	* kawa/standard/object.java (rewriteClassDef): If an input sub-form
